--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
   <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
   </script>
+  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 
 <script src="//apis.google.com/js/platform.js?onload=start"> </script>
 
@@ -19,18 +20,22 @@
 
 <!-- GOOGLE PLUS SIGN IN BUTTON-->
 
+<div style="text-align: center;padding-top:20%;">
+    <h1>Log in </h1>
+    <div id="signinButton">
 
-          <div id="signinButton">
-          <span class="g-signin"
-            data-scope="openid email"
-            data-clientid="648113505859-erec3rn493jb0j4krp01hq5kefcqo7hb.apps.googleusercontent.com"
-            data-redirecturi="postmessage"
-            data-accesstype="offline"
-            data-cookiepolicy="single_host_origin"
-            data-callback="signInCallback"
-            data-approvalprompt="force">
-          </span>
-        </div>
+    <span class="g-signin"
+      data-scope="openid email"
+      data-clientid="648113505859-erec3rn493jb0j4krp01hq5kefcqo7hb.apps.googleusercontent.com"
+      data-redirecturi="postmessage"
+      data-accesstype="offline"
+      data-cookiepolicy="single_host_origin"
+      data-callback="signInCallback"
+      data-approvalprompt="force">
+    </span>
+  </div>
+</div>
+
 
 
 
