--- a/templates/newItem.html
+++ b/templates/newItem.html
@@ -12,18 +12,18 @@
 			<form action="{{url_for('newItem')}}" method = "post">
 				<div class="form-group">
 				<label for="name">Item Name:</label>
-				<input type ="text" class="form-control" maxlength="100" name="name">
+				<input type ="text" class="form-control" maxlength="100" name="name" required>
 				<div class="padding-bottom"></div>
 				<label for="name">Description:</label>
-				<input type ="textarea" class="form-control" name="description">
+				<input type ="textarea" class="form-control" name="description" required>
 				<div class="padding-bottom"></div>
-				<select name="category">
+				<select name="category" required>
 					{% for category in categories %}
 					<option> {{category.name}} </option>
 					{% endfor %}
 				</select>
 				<div class="padding-bottom"></div>
-				<input type="submit" type="submit" value="Create!"/> 
+				<input type="submit" type="submit" value="Create!"/>
 				</div>
 			</form>
 		</div>
