--- a/templates/public_item.html
+++ b/templates/public_item.html
@@ -1,6 +1,6 @@
 {% extends "main.html" %}
 {% block content %}
-{% include "header.html" %}
+{% include "public_header.html" %}
 
 	<div class="row details banner menu">
 		<div class="col-md-8 ">
