--- a/templates/header.html
+++ b/templates/header.html
@@ -4,6 +4,10 @@
 		<h1>Apple Catalog</h1>
 	</div>
 	<div class="col-md-6 text-right">
+		{% if user %}
 					<p> <a href="{{url_for('gdisconnect')}}"> Log out </a> </p>
+		{% else %}
+					<p> <a href="{{url_for('showLogin')}}"> Log in </a> </p>
+		{% endif %}
 	</div>
 </div>
