--- a/templates/item.html
+++ b/templates/item.html
@@ -10,12 +10,14 @@
 					{{item.description}}
 				</p>
 			</div>
+			{% if user and creator %}
 			<div style="display:flex;">
 				<a style="paddng:4px;" href="{{url_for('editItem', item_id = item.id, category_id = item.category_id)}}"> edit </a>   |
 				<form method="POST" action="{{url_for('deleteItem', category_id=item.category_id, item_id = item.id)}}" >
 					<button type="submit"> delete </button>
 				</form>
 			</div>
+			{% endif %}
 
 		</div>
 	</div>
